--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "create:lib": "./node_modules/.bin/babel --out-dir lib src",
     "build": "npm run clear && npm run create:lib",
     "build:watch": "npm run clear && npm run create:lib -- --watch",
+    "build:umd": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.js",
+    "build:umd:min": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.min.js -p",
+    "build:all": "npm run build && npm run build:umd && npm run build:umd:min",
     "lint": "./node_modules/.bin/eslint src/*.js",
-    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
-    "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require @babel/register --watch",
+    "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require @babelregister --watch",
     "test:coverage": "nyc npm test"
   },
   "nyc": {
@@ -38,11 +41,13 @@
   },
   "homepage": "https://github.com/leandrotartarini/spotify-wrapper#readme",
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
-    "babel-cli": "^6.26.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
+    "babel-upgrade": "0.0.24",
     "chai": "^4.2.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -54,7 +59,8 @@
     "rimraf": "^2.6.3",
     "sinon": "^7.2.3",
     "sinon-chai": "^3.3.0",
-    "webpack": "^4.29.0"
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
   },
   "dependencies": {}
 }
