--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "nyc": {
     "reporter": [
       "text",
-      "htlm"
+      "html"
     ],
     "exclude": [
       "tests/**"
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.5",
@@ -62,5 +63,7 @@
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.18.0"
+  }
 }
