--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "./node_modules/.bin/eslint src/*.js",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require @babel/register --watch",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require @babelregister --watch",
-    "test:coverage": "nyc npm test"
+    "test:coverage": "nyc npm test",
+    "coveralls": "npm run test:coverage && nyc report --reporter=text-lcov | coveralls"
   },
   "nyc": {
     "reporter": [
@@ -50,6 +51,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-upgrade": "0.0.24",
     "chai": "^4.2.0",
+    "coveralls": "^3.0.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
